完成注册模块 - 注册模块基本功能 - 用户表微调
