# api-system/api/docs/swagger.yaml
@@ -57,6 +57,8 @@ definitions:
         type: string
       email:
         type: string
+      invited_code:
+        type: string
       password:
         type: string
       phone:
@@ -64,7 +66,6 @@ definitions:
       username:
         type: string
     required:
-    - email
     - password
     - username
     type: object
@@ -130,6 +131,14 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/v1.LoginForm'
+      - in: query
+        name: captcha_id
+        required: true
+        type: string
+      - in: query
+        name: captcha_val
+        required: true
+        type: string
       responses:
         "200":
           description: OK
@@ -161,12 +170,20 @@ paths:
   /v1/user/register:
     post:
       parameters:
-      - description: register form
+      - description: form
         in: body
         name: form
         required: true
         schema:
           $ref: '#/definitions/v1.RegisterForm'
+      - in: query
+        name: captcha_id
+        required: true
+        type: string
+      - in: query
+        name: captcha_val
+        required: true
+        type: string
       responses:
         "200":
           description: OK
