# api-system/internal/app/entity/user.go
@@ -1,10 +1,11 @@
 package entity
 
 type UserRegister struct {
-	UserName string
-	Email    string
-	Phone    string
-	Password string
+	UserName    string
+	Email       string
+	Phone       string
+	Password    string
+	InvitedCode string
 }
 
 type UserLogin struct {
